--- a/Data_opschonen.ipynb
+++ b/Data_opschonen.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,8 @@
      "text": [
       "0.0494 144.5862\n",
       "270288\n",
-      "{'SMALL', 'MEDIUM', 'LARGE', nan}\n"
+      "{'SMALL', 'MEDIUM', 'LARGE', nan}\n",
+      "{'PAYLOAD', 'TBA', 'DEBRIS', 'ROCKET BODY'}\n"
      ]
     }
    ],
@@ -373,7 +374,8 @@
     "display(dataset)\n",
     "print(min(dataset['INCLINATION']), max(dataset['INCLINATION']))\n",
     "print(max(dataset['NORAD_CAT_ID']))\n",
-    "print(set(dataset['RCS_SIZE']))"
+    "print(set(dataset['RCS_SIZE']))\n",
+    "print(set(dataset['OBJECT_TYPE']))"
    ]
   },
   {
@@ -431,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -440,33 +442,13 @@
        "0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(3 + (3 * 2)) % 9"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "10 % "
+    "180 % (60 * 3)"
    ]
   },
   {
